--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "foundry/lib/forge-std"]
 	path = foundry/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "foundry/lib/rocketpool"]
+	path = foundry/lib/rocketpool
+	url = https://github.com/rocket-pool/rocketpool
